<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>als_ros</name>
  <version>0.0.0</version>
  <description>The als_ros package</description>

  <maintainer email="n.akai.goo@gmail.com">akai</maintainer>

  <license>Apache License 2.0</license>

  <author email="n.akai.goo@gmail.com">Naoki Akai</author>

  

  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <!-- <build_depend>cv_bridge</build_depend> -->
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <!-- <build_depend>nav_msgs</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>sensor_msgs</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>tf</build_depend> -->
  <!-- <build_export_depend>cv_bridge</build_export_depend> -->
  <!-- <build_export_depend>geometry_msgs</build_export_depend> -->
  <!-- <build_export_depend>nav_msgs</build_export_depend> -->
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>sensor_msgs</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <build_export_depend>tf</build_export_depend> -->

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>roscpp</depend> -->
  <!-- <depend>rospy</depend> -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
